# icey

./: .clang-tidy  .dockerignore  .gitignore  .gitmodules  BUILD.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Dockerfile  Dockerfile.docs  Doxyfile  Icey.cmake  LibSourcey.cmake  Makefile  README.md  ROADMAP.md  TODO.md  conanfile.py  flake.nix  icey.cmake  llms.txt  package-lock.json  package.json
.plans/: distribution-blowup.md
bench/: benchutil.h  node-server.js  run_benchmarks.py  validate_benchmarks.py
cmake/: FindFFmpeg.cmake  FindOpenCV.cmake  IceyBuildConfig.cmake.in  IceyCompilerOptions.cmake  IceyConfig.cmake.in  IceyModules.cmake  IceyPackage.cmake  LibSourceyCompilerOptions.cmake  LibSourceyConfig.cmake.in  LibSourceyModules.cmake  (+11 more)
src/av/: CMakeLists.txt  README.md
src/av/include/icy/av/: audiobuffer.h  audiocapture.h  audiocontext.h  audiodecoder.h  audioencoder.h  audiopacketencoder.h  audioresampler.h  av.h  codec.h  devicemanager.h  ffmpeg.h  format.h  formatregistry.h  fpscounter.h  icapture.h  iencoder.h  mediacapture.h  multiplexencoder.h  multiplexpacketencoder.h  packet.h  realtimepacketqueue.h  videocapture.h  videocontext.h  videoconverter.h  videodecoder.h  videoencoder.h  videopacketencoder.h
src/av/include/icy/av/apple/: avfoundation.h  coreaudio.h
src/av/include/icy/av/linux/: v4l2.h
src/av/include/icy/av/win32/: mediafoundation.h
src/av/include/scy/av/: audiobuffer.h  audiocapture.h  audiocontext.h  audiodecoder.h  audioencoder.h  audioresampler.h  av.h  codec.h  devicemanager.h  ffmpeg.h  format.h  formatregistry.h  fpscounter.h  icapture.h  iencoder.h  mediacapture.h  multiplexencoder.h  multiplexpacketencoder.h  packet.h  realtimepacketqueue.h  videocapture.h  videocontext.h  videoconverter.h  videodecoder.h  videoencoder.h
src/av/include/scy/av/apple/: avfoundation.h  coreaudio.h
src/av/include/scy/av/linux/: v4l2.h
src/av/include/scy/av/win32/: directshow.h  mediafoundation.h
src/av/samples/: CMakeLists.txt
src/av/samples/devicecapture/: CMakeLists.txt  README.md  devicecapture.cpp
src/av/samples/deviceenumerator/: CMakeLists.txt  README.md  deviceenumerator.cpp
src/av/samples/devicerecorder/: CMakeLists.txt  README.md  devicerecorder.cpp
src/av/samples/devicewatcher/: CMakeLists.txt  README.md  devicewatcher.cpp
src/av/samples/filetranscode/: CMakeLists.txt  filetranscode.cpp
src/av/samples/mediaserver/: CMakeLists.txt  config.h  main.cpp  mediaserver.cpp  mediaserver.h  relayresponder.h  snapshotresponder.h  streamingresponder.h  websocketresponder.h
src/av/samples/mediaserver/client/: package-lock.json
src/av/samples/mjpegserver/: CMakeLists.txt  README.md  mjpegserver.cpp
src/av/samples/videosocket/: CMakeLists.txt  videosocket.cpp
src/av/samples/waveformoutput/: CMakeLists.txt  waveformoutput.cpp
src/av/samples/wsstreamer/: CMakeLists.txt  wsstreamer.cpp
src/av/src/: audiobuffer.cpp  audiocapture.cpp  audiocontext.cpp  audiodecoder.cpp  audioencoder.cpp  audiopacketencoder.cpp  audioresampler.cpp  codec.cpp  devicemanager.cpp  ffmpeg.cpp  format.cpp  formatregistry.cpp  mediacapture.cpp  multiplexencoder.cpp  multiplexpacketencoder.cpp  packet.cpp  videocapture.cpp  videocontext.cpp  videoconverter.cpp  videodecoder.cpp  videoencoder.cpp  videopacketencoder.cpp
src/av/src/apple/: avfoundation.cpp  avfoundation.mm  avfoundation_mm  coreaudio.cpp
src/av/src/linux/: v4l2.cpp
src/av/src/win32/: directshow.cpp  mediafoundation.cpp
src/av/tests/: CMakeLists.txt  avtests.cpp  avtests.h
src/http/bench/: CMakeLists.txt  README.md  benchmark.sh  httpbench.cpp  httpparsebench.cpp  wsbench.cpp
src/http/perf/: CMakeLists.txt  README.md  benchmark.sh  go-server.go  httpperf.cpp  node-server.js
src/json/: CMakeLists.txt  README.md
src/json/include/icy/json/: configuration.h  iserializable.h  json.h
src/json/include/scy/json/: configuration.h  iserializable.h  json.h
src/json/src/: configuration.cpp
src/json/tests/: CMakeLists.txt  jsontests.cpp
src/webrtc/: CMakeLists.txt  README.md
src/webrtc/apps/media-server/: CMakeLists.txt  README.md  config.json  media-server.cpp
src/webrtc/apps/media-server/docker/: Dockerfile  README.md  compose.yaml  entrypoint.sh
src/webrtc/apps/media-server/internal/: app.cpp  app.h  config.cpp  config.h  httpfactory.cpp  httpfactory.h  media.cpp  media.h  turnserver.cpp
src/webrtc/apps/media-server/web/: index.html  package-lock.json  package.json
src/webrtc/apps/media-server/web/src/: app.js  style.css
src/webrtc/apps/media-server/web/tests/: browser-smoke.mjs
src/webrtc/bench/: CMakeLists.txt  webrtcbench.cpp
src/webrtc/include/icy/webrtc/: codecnegotiator.h  jitterbuffer.h  mediabridge.h  peersession.h  signalling.h  track.h  trackreceiver.h  tracksender.h  webrtc.h
src/webrtc/include/icy/webrtc/detail/: receiverjitterbuffer.h
src/webrtc/include/scy/webrtc/: codecnegotiator.h  mediabridge.h  peersession.h  signalling.h  track.h  trackreceiver.h  tracksender.h  webrtc.h
src/webrtc/samples/: CMakeLists.txt  symplesignaller.cpp  symplesignaller.h  wssignaller.cpp  wssignaller.h
src/webrtc/samples/data-echo/: CMakeLists.txt  README.md  data-echo.cpp
src/webrtc/samples/file-streamer/: CMakeLists.txt  README.md  file-streamer.cpp
src/webrtc/samples/media-recorder/: CMakeLists.txt  README.md  media-recorder.cpp
src/webrtc/samples/webcam-streamer/: CMakeLists.txt  README.md  webcam-streamer.cpp
src/webrtc/src/: codecnegotiator.cpp  codecregistry.cpp  codecregistry.h  mediabridge.cpp  peersession.cpp  peersessionrtc.cpp  peersessionsignalling.cpp  remotemediaplan.cpp  remotemediaplan.h  track.cpp  trackreceiver.cpp  tracksender.cpp
src/webrtc/support/: CMakeLists.txt
src/webrtc/support/include/icy/webrtc/support/: support.h  sympleserversignaller.h  symplesignaller.h  wssignaller.h
src/webrtc/support/src/: callprotocol.cpp  callprotocol.h  sympleserversignaller.cpp  symplesignaller.cpp  wssignaller.cpp
src/webrtc/tests/: CMakeLists.txt  webrtctests.cpp  webrtctests.h
tests/consumer/: CMakeLists.txt
(+723 files in other folders)
